--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".screens.main.MainFragment">
 
+    <ImageView
+        android:id="@+id/spaceStickImageView"
+        android:layout_width="match_parent"
+        android:layout_height="382dp"
+        android:layout_margin="20dp"
+        android:src="@drawable/space_stick"
+        tools:ignore="ContentDescription"/>
+
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/wifiNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MainFragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_below="@+id/spaceStickImageView"
+        android:layout_centerHorizontal="true"
+        android:textSize="32sp"
+        android:textColor="@color/colorPrimaryDark"
+        tools:text="SpaceStickWifi"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/checkConnectionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/wifiNameTextView"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
+        android:text="check connection"/>
+
+</RelativeLayout>
