--- a/app/src/main/res/layout/item_stick_pattern.xml
+++ b/app/src/main/res/layout/item_stick_pattern.xml
@@ -3,16 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="96dp"
-    android:layout_height="96dp"
-    android:layout_margin="5dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="5dp"
     app:cardBackgroundColor="@color/colorAccent"
     app:cardElevation="0dp"
     app:cardCornerRadius="12dp">
     
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="96dp"
+        android:layout_height="96dp">
 
         <TextView
             android:id="@+id/wifiNameTextView"
