--- a/app/src/main/res/layout/fragment_stick.xml
+++ b/app/src/main/res/layout/fragment_stick.xml
@@ -86,7 +86,7 @@
         android:layout_below="@+id/speedSeekBar">
 
         <ImageView
-            android:id="@+id/previousImageView"
+            android:id="@+id/previousButtonImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -94,7 +94,7 @@
             tools:ignore="ContentDescription"/>
 
         <ImageView
-            android:id="@+id/playPauseImageView"
+            android:id="@+id/playPauseButtonImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -102,7 +102,7 @@
             tools:ignore="ContentDescription"/>
 
         <ImageView
-            android:id="@+id/forwardImageView"
+            android:id="@+id/forwardButtonImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
