--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -16,6 +16,38 @@
         android:src="@drawable/space_stick"
         tools:ignore="ContentDescription"/>
 
+    <ImageView
+        android:id="@+id/wifi"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_below="@+id/spaceStickImageView"
+        android:layout_toStartOf="@+id/wifiNameTextView"
+        android:layout_marginEnd="5dp"
+        android:src="@drawable/wifi"
+        tools:ignore="ContentDescription"/>
+
+    <ImageView
+        android:id="@+id/unknownWifi"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_below="@+id/spaceStickImageView"
+        android:layout_toStartOf="@+id/wifiNameTextView"
+        android:layout_marginEnd="5dp"
+        android:src="@drawable/unknown_wifi"
+        android:visibility="gone"
+        tools:ignore="ContentDescription"/>
+
+    <ImageView
+        android:id="@+id/wifiOff"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_below="@+id/spaceStickImageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="5dp"
+        android:src="@drawable/wifi_off"
+        android:visibility="gone"
+        tools:ignore="ContentDescription"/>
+
     <TextView
         android:id="@+id/wifiNameTextView"
         android:layout_width="wrap_content"
@@ -26,13 +58,21 @@
         android:textColor="@color/colorPrimaryDark"
         tools:text="SpaceStickWifi"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/checkConnectionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_below="@+id/wifiNameTextView"
         android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true"
-        android:text="check connection"/>
+        android:text="Connect"
+        android:textSize="18sp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        app:iconSize="24dp"
+        app:iconPadding="0dp"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"/>
 
 </RelativeLayout>
