--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#89b0ae</color>
+    <color name="colorPrimaryDark">#555b6e</color>
+    <color name="colorAccent">#bee3db</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 
     <color name="color_background">#F9F9F9</color>
     <color name="color_dark_gray">#445867</color>
