--- a/app/src/main/res/layout/item_stick_pattern.xml
+++ b/app/src/main/res/layout/item_stick_pattern.xml
@@ -6,7 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="5dp"
-    app:cardBackgroundColor="@color/colorAccent"
+    app:cardBackgroundColor="@color/colorPrimary"
     app:cardElevation="0dp"
     app:cardCornerRadius="12dp">
     
