--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#89b0ae</color>
+    <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#555b6e</color>
-    <color name="colorAccent">#bee3db</color>
+    <color name="colorAccent">#424242</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 
