--- a/app/src/main/res/drawable/ic_pattern2.xml
+++ b/app/src/main/res/drawable/ic_pattern2.xml
@@ -7,15 +7,15 @@
       android:pathData="M150.34,155.24l29.41,50.64l-29.15,50.79l-58.55,0.15l-29.42,-50.64l29.15,-50.79z"
       android:strokeWidth="7"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M150,26.64l29.41,50.64l-29.14,50.79l-58.56,0.15l-29.41,-50.63l29.15,-50.79z"
       android:strokeWidth="7"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M208.87,90.59l29.42,50.63l-29.15,50.79l-58.56,0.16l-29.41,-50.64l29.15,-50.79z"
       android:strokeWidth="7"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
 </vector>
