--- a/app/src/main/res/drawable/ic_pattern12.xml
+++ b/app/src/main/res/drawable/ic_pattern12.xml
@@ -7,10 +7,10 @@
       android:pathData="M137.1,48.68l-108.46,77.62l118.21,55.4z"
       android:strokeWidth="6"
       android:fillColor="#FFFFFF"
-      android:strokeColor="#000000"/>
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M254.83,259.69l-186.28,-87.3l168.74,-117.67z"
       android:strokeWidth="8"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="#FFFFFF"/>
 </vector>
