--- a/app/src/main/res/drawable/ic_pattern14.xml
+++ b/app/src/main/res/drawable/ic_pattern14.xml
@@ -7,30 +7,30 @@
       android:pathData="M67.2,51.45L67.2,221.49"
       android:strokeWidth="6"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M210.52,51.45L210.52,221.49"
       android:strokeWidth="6"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M67.2,51.45L210.52,51.45"
       android:strokeWidth="6"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M67.2,221.49L210.52,51.45"
       android:strokeWidth="6"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M210.52,221.49L67.2,51.45"
       android:strokeWidth="6"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M67.2,136.47L138.86,136.47"
       android:strokeWidth="4"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
 </vector>
