--- a/app/src/main/res/drawable/ic_pattern3.xml
+++ b/app/src/main/res/drawable/ic_pattern3.xml
@@ -6,26 +6,25 @@
   <path
       android:pathData="M34.85,141.73a105.76,103.93 0,1 0,211.52 0a105.76,103.93 0,1 0,-211.52 0z"
       android:strokeWidth="6"
-      android:fillColor="#FFFFFF"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M48.8,189.16L191.32,50.51"
       android:strokeWidth="6"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M164.18,165.91c16.3,16.75 33.3,32.75 49.71,49.64"
       android:strokeWidth="6"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M68.22,63.14c16.3,16.75 33.3,32.75 49.71,49.64"
       android:strokeWidth="6"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
   <path
       android:pathData="M88.19,229.65L230.71,91"
       android:strokeWidth="6"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="@color/white"/>
 </vector>
