--- a/app/src/main/res/drawable/ic_pattern8.xml
+++ b/app/src/main/res/drawable/ic_pattern8.xml
@@ -6,16 +6,13 @@
   <path
       android:pathData="M141.73,29.18l-127.48,225.1l254.96,0z"
       android:strokeWidth="6"
-      android:fillColor="#FFFFFF"
-      android:strokeColor="#000000"/>
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M37.86,212.6L245.66,212.7"
       android:strokeWidth="6"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M141.76,31.94L141.76,212.65"
       android:strokeWidth="6"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:strokeColor="#FFFFFF"/>
 </vector>
