--- a/app/src/main/res/drawable/ic_pattern9.xml
+++ b/app/src/main/res/drawable/ic_pattern9.xml
@@ -6,21 +6,17 @@
   <path
       android:pathData="M14.69,141.7a127.02,124.55 0,1 0,254.04 0a127.02,124.55 0,1 0,-254.04 0z"
       android:strokeWidth="6"
-      android:fillColor="#FFFFFF"
-      android:strokeColor="#000000"/>
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M141.71,192.26l19.67,-33.41l-39.34,0z"
       android:strokeWidth="6"
-      android:fillColor="#FFFFFF"
-      android:strokeColor="#000000"/>
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M167.38,148.12l19.67,-33.41l-39.34,0z"
       android:strokeWidth="6"
-      android:fillColor="#FFFFFF"
-      android:strokeColor="#000000"/>
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M118.46,147.58l19.67,-33.41l-39.34,0z"
       android:strokeWidth="6"
-      android:fillColor="#FFFFFF"
-      android:strokeColor="#000000"/>
+      android:strokeColor="#FFFFFF"/>
 </vector>
