--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#424242</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="lite">#F5F5F9</color>
 
     <color name="color_background">#F9F9F9</color>
     <color name="color_dark_gray">#445867</color>
