--- a/app/src/main/res/layout/fragment_rgb_settings.xml
+++ b/app/src/main/res/layout/fragment_rgb_settings.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:id="@+id/tab"
-        android:layout_marginTop="7dp"
+        android:layout_margin="24dp"
         android:layout_width="match_parent"
         android:layout_height="45dp">
 
@@ -26,7 +26,6 @@
             android:id="@+id/backImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24sp"
             android:layout_centerVertical="true"
             android:src="@drawable/arrow_back"
             app:tint="@color/colorPrimary"
@@ -38,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:layout_below="@+id/tab"
         android:insetLeft="0dp"
         android:insetTop="0dp"
