fix rgb pallete, set default settings at launch

--- a/app/src/main/res/layout/fragment_rgb_settings.xml
+++ b/app/src/main/res/layout/fragment_rgb_settings.xml
@@ -29,6 +29,8 @@
             android:layout_centerVertical="true"
             android:src="@drawable/arrow_back"
             app:tint="@color/colorPrimary"
+            android:clickable="true"
+            android:focusable="true"
             tools:ignore="ContentDescription" />
 
     </RelativeLayout>
