--- a/app/src/main/res/layout/fragment_stick.xml
+++ b/app/src/main/res/layout/fragment_stick.xml
@@ -31,20 +31,21 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:layout_toEndOf="@+id/spaceStickImageView"
+            android:textStyle="bold"
             android:text="Orion"
             android:textColor="@color/white"
             android:textSize="28sp" />
 
         <TextView
-            android:id="@+id/wifiNameTextView"
+            android:id="@+id/wifiStatusPositiveTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/modelTextView"
             android:layout_marginStart="15dp"
             android:layout_toEndOf="@+id/spaceStickImageView"
-            android:textColor="@color/lite"
-            android:textSize="20sp"
-            tools:text="SpaceStickWiFi" />
+            android:textColor="@color/green"
+            android:textSize="18sp"
+            tools:text="Connected" />
 
         <ImageView
             android:id="@+id/settingsImageView"
@@ -151,6 +152,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginStart="26dp"
         android:layout_marginEnd="26dp"
+        android:layout_marginBottom="10dp"
         android:columnWidth="100dp"
         android:stretchMode="columnWidth"
         android:numColumns="auto_fit"
